--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,19 @@
+title: Biotea
+author: Biotea
+email: biotea@gmail.com
+description: > # this means to ignore newlines until "baseurl:"
+  Using Semantics and Natural Language Processing in Experimental Protocols
+github_username:  SMARTProtocols
+
+header_pages:
+  - contributors.html
+  - ontology.html
+  - queries.html
+  - annex.html
+
+# Build settings
+markdown: kramdown
 theme: minima
+exclude:
+  - Gemfile
+  - Gemfile.lock
